--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,46 +59,46 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>12865</font></td>
-    <td><font size=2>9010</font></td>
-    <td><font size=2>1300</font></td>
-    <td><font size=2>395</font></td>
-    <td><font size=2>4</font></td>
-<tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>11320</font></td>
-    <td><font size=2>9440</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>220</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>11225</font></td>
-    <td><font size=2>9770</font></td>
-    <td><font size=2>1325</font></td>
-    <td><font size=2>135</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>Mike(5)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>10260</font></td>
-    <td><font size=2>10945</font></td>
-    <td><font size=2>805</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Steven(3)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>12</font></td>
-    <td><font size=2>10510</font></td>
-    <td><font size=2>11095</font></td>
-    <td><font size=2>1045</font></td>
-    <td><font size=2>360</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Grant(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,46 +107,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>12125</font></td>
-    <td><font size=2>9810</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>400</font></td>
+<tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>10825</font></td>
-    <td><font size=2>8330</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>12525</font></td>
-    <td><font size=2>10005</font></td>
-    <td><font size=2>1120</font></td>
-    <td><font size=2>305</font></td>
-    <td><font size=2>2</font></td>
-<tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9580</font></td>
-    <td><font size=2>9955</font></td>
-    <td><font size=2>930</font></td>
-    <td><font size=2>150</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>800</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>10780</font></td>
-    <td><font size=2>10655</font></td>
-    <td><font size=2>830</font></td>
-    <td><font size=2>250</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(10)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>0</font></td>
 </table>
 </table>
 </body>
