--- a/week1.html
+++ b/week1.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>135</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>130</td></tr>
 <tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>65</td></tr>
 <tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>435</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>190</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>70</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>35</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>35</td></tr>
 <tr><td>WRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>380</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>160</td></tr>
 <tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>135</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>185</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>240</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>75</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>795</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>250</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>45</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>125</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>25</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>145</td></tr>
+<tr><td>London</td>        <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>625</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>215</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gabriel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Penny</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>85</td></tr>
+<tr><td>GDavis</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>65</td></tr>
 <tr><td>Pierce</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>565</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>130</td></tr>
+<tr><td>NHarris</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>70</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>75</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>45</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>405</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>105</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>50</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Dotson</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>120</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>135</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>135</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>80</td></tr>
+<tr><td>Dotson</td>        <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>800</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>60</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>135</td></tr>
 <tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>140</td></tr>
+<tr><td>Gano</td>          <td></td><td align=right>5</td></tr>
+<tr><td>York</td>          <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>540</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>60</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>50</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Burks</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Burks</td>         <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>260</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>345</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>110</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>150</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>80</td></tr>
 <tr><td>SMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>715</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>565</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(9)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>565</font></td>
+    <td><font size=2>405</font></td>
+    <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>435</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>380</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -214,44 +214,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>795</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>715</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>625</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>540</font></td>
+    <td><font size=2>540</font></td>
     <td><font size=2>0</font></td>
 </table>
