--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,86 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>Final 2021 Free Agent Leaderboard</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3>1705</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3>1670</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jared Goff             </td><td><font size=3>1515</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3>1330</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3>1250</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3>1085</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Daniel Jones           </td><td><font size=3>1075</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Sam Darnold            </td><td><font size=3>1025</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Trevor Siemian         </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 670</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Mike White             </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Josh Johnson           </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Geno Smith             </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Drew Lock              </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Davis Mills            </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Justin Fields          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Geno Smith             </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jared Goff             </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Joe Flacco             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Mac Jones              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Boston Scott           </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Travis Homer           </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>Kenyan Drake           </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>Rex Burkhead           </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Derrick Gore           </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>Duke Johnson           </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>Samaje Perine          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Ke'Shawn Vaughn        </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>Damien Williams        </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Godwin Igwebuike       </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Ty'Son Williams        </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Brandon Bolden         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Chris Myarick          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Boston Scott           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3>   5</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>KJ Osborn              </td><td><font size=3> 860</td></tr>
-<tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 815</td></tr>
-<tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 745</td></tr>
-<tr><td><font size=3>Allen Lazard           </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 720</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 650</td></tr>
-<tr><td><font size=3>Ced Wilson             </td><td><font size=3> 650</td></tr>
-<tr><td><font size=3>AJ Green               </td><td><font size=3> 600</td></tr>
-<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 580</td></tr>
-<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 575</td></tr>
-<tr><td><font size=3>Braxton Berrios        </td><td><font size=3> 565</td></tr>
-<tr><td><font size=3>Byron Pringle          </td><td><font size=3> 550</td></tr>
-<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Donovan Peoples-Jones  </td><td><font size=3> 530</td></tr>
-<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 510</td></tr>
+<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Robbie Anderson        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Dante Pettis           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>DJ Chark               </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Ty Montgomery          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Equanimeous St Brown   </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Jarvis Landry          </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Tyler Boyd             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Mecole Hardman         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Corey Davis            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>Noah Brown             </td><td><font size=3>  30</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>TJ Hockenson           </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Noah Fant              </td><td><font size=3> 420</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 415</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Josiah Deguara         </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Donald Parham          </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Harrison Bryant        </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Anthony Firkser        </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Will Dissly            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jody Fortson           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Andrew Beck            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Ian Thomas             </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3>1530</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3>1290</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>1265</td></tr>
-<tr><td><font size=3>Harrison Butker        </td><td><font size=3>1225</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>1190</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>1160</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3>1090</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 980</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 890</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 885</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 820</td></tr>
-<tr><td><font size=3>Matthew Wright         </td><td><font size=3> 790</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 780</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3> 550</td></tr>
+<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>  55</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Kene Nwangwu           </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Josh Palmer            </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>Jermar Jefferson       </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Ihmir Smith-Marsette   </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Brevin Jordan          </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Brock Wright           </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Nico Collins           </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>Tommy Tremble          </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Chris Evans            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>JaQuan Hardy           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Trey Sermon            </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Anthony Schwartz       </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>John Bates             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>D'Wayne Eskridge       </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Dez Fitzpatrick        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Zander Horvath         </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
